test : memberTest 작성